# Virtually-Abelian

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
inc/: geodesic-growth.hpp
inc/_impl/: geodesic-growth.impl.hpp
inc/group-impl/: heisenberg.hpp  virt-heisenberg.hpp
include/: CMakeLists.txt
include/vheis/: CMakeLists.txt  geodesic-growth.hpp
include/vheis/group-impl/: CMakeLists.txt  heisenberg.hpp  virt-heisenberg.hpp
lib/SafeInt/: SafeInt.hpp
output/: data.csv
src/: .gcc-flags.json  CMakeLists.txt  main.cpp  main_growth.cpp
src/group-impl/: CMakeLists.txt  heisenberg.cpp  virt-heisenberg.cpp
